--- a/lesson4-6/index.html
+++ b/lesson4-6/index.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
 </head>
-<!--<img src="http://placehold.it/200x150" />-->
+<!--<img src="http://placehold.it/250x250" />-->
 
 <body>
     <nav>
-        <a href="index.html" class="link_nav">главная</a>
-        <a href="catalog.html" class="link_nav">товары</a>
+        <a href="index.html" class="link_nav">товары</a>
         <a href="cart.html" class="link_nav">корзина</a>
     </nav>
-
-    <div class="board">
-    </div>
-
-    <script src="main.js"></script>
+    <div id="list_products"></div>
+    <script src="catalog.js" defer></script>
 </body>
 
 </html>
